DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-13-2004 patrickh    Renamed gadget::SpeechRecogDigital* to gadget::Command*
                        and gadget::SpeechRecogString* to gadget::String*.
                        NEW VERSION 0.20.0
Nov-08-2004 dshipton    Split EventWindowXWin::openTheWindow() into
                        openLocalWindow and setupRemoteWindow and
                        added code to get size into getWindowWidthAndHeight().
Oct-18-2004 allenb      Major refactoring of EventWindow handling on X.
                        Now the X event window device can sample events
                        from "remote" windows that it did not open.
                        This uses a new window registry and works with vrj
                        to allow input from GL and Performer windows.
                        NEW VERSION 0.19.0
Oct-18-2004 allenb      Renamed Input::getBaseType to getInputTypeName.
Oct-11-2004 patrickh    Implemented version checking for device driver and
                        cluster plug-ins.  All Gadgeteer plug-ins must now
                        have an exported function called getGadgeteerVersion().
                        See the information in RELEASE_NOTES.txt for more
                        details.
                        NEW VERSION: 0.18.0
Oct-11-2004 aronb       Added support for BaseTypes InputGlove & 
                        InputGloveDigital in order to allow glove
                        devices to work properly on the cluster.
Oct-11-2004 patrickh    Updated to require VPR 0.40.0.
                        NEW VERSION: 0.17.1
Sep-24-2004 aronb       Split gadget::InputManager::updateAllData() into
                        gadget::InputManager::updateAllDevices() and
                        gadget::InputManager::updateAllProxies().
                        NEW VERSION: 0.17.0
Aug-19-2004 patrickh    Added a driver for joysticks on Windows that uses