@@ -37,7 +37,7 @@
 # that is actually run.
 # -----------------------------------------------------------------------------
 
-AC_INIT([Gadgeteer], [0.20], [vrjuggler-devel@lists.sourceforge.net])
+AC_INIT([Gadgeteer], [0.21], [vrjuggler-devel@lists.sourceforge.net])
 AC_CONFIG_HEADERS([gadget/gadgetDefines.h])
 AC_PREREQ([2.53])
 AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2003 by Iowa State University])
